test_suite/tests/ui/common/schemars08.rs
use nutype::nutype;

#[nutype(derive(JsonSchema))]
pub struct Username(String);

fn main() {}
